# head_first_rust

./: .gitignore  Cargo.toml  LICENSE
deeper_dungeons/: Cargo.toml
deeper_dungeons/src/: components.rs  main.rs  map.rs  spawner.rs  turn_state.rs
deeper_dungeons/src/map_builder/: automata.rs  empty.rs  prefab.rs
deeper_dungeons/src/systems/: chasing.rs  end_turn.rs  hud.rs  map_render.rs
dungeon_crawl/: Cargo.toml
dungeon_crawl/src/: main.rs  map.rs  map_builder.rs  player.rs
dungeon_crawl_ecs/src/: components.rs  main.rs  map.rs  spawner.rs  turn_state.rs
dungeon_crawl_ecs/src/systems/: collisions.rs  end_turn.rs  entity_render.rs  map_render.rs  mod.rs  player_input.rs  random_move.rs  tooltips.rs
dungeon_crawl_esc/: Cargo.toml
dungeon_crawl_esc/src/: main.rs  player.rs
exercism/: Cargo.toml
exercism/src/: solutions.rs
exercism/tests/: reverse_tests.rs
flappy_dragon/: Cargo.toml
inventory_and_power_ups/: Cargo.toml
inventory_and_power_ups/src/: components.rs  main.rs  map.rs
inventory_and_power_ups/src/map_builder/: drunkard.rs  empty.rs  map_builder.rs  mod.rs  themes.rs
inventory_and_power_ups/src/systems/: hud.rs  map_render.rs  mod.rs  player_input.rs  tooltips.rs  use_items.rs
loot/: Cargo.toml
loot/resources/: template.ron
loot/src/: components.rs  main.rs
loot/src/map_builder/: rooms.rs  themes.rs
loot/src/spawner/: mod.rs  template.rs
loot/src/systems/: chasing.rs  combat.rs  end_turn.rs  hud.rs  player_input.rs
mall/: .env  Cargo.toml
mall/src/: config.rs  db.rs  handlers.rs  main.rs  routes.rs
mall/src/models/goods/: hardware_goods.rs  mod.rs
mall/src/models/orders/: mod.rs
melee_combat/src/: components.rs  main.rs  map.rs  map_builder.rs  spawner.rs  turn_state.rs
melee_combat/src/systems/: chasing.rs  combat.rs  end_turn.rs  (+3 more)
more_instresting_dungeons/: Cargo.toml
more_instresting_dungeons/src/: main.rs
realworld-backend/: .env  Cargo.toml  Rocket.toml  diesel.toml
realworld-backend/migrations/2024-08-05-021731_create_users/: up.sql
realworld-backend/migrations/2024-08-05-021741_create_articles/: up.sql
realworld-backend/migrations/2024-08-05-021750_create_comments/: down.sql  up.sql
realworld-backend/migrations/2024-08-05-021802_create_follows/: up.sql
realworld-backend/migrations/2024-08-05-021810_create_tags/: up.sql
realworld-backend/migrations/2024-08-05-021818_create_article_tags/: down.sql  up.sql
realworld-backend/src/: lib.rs  main.rs  schema.rs
realworld-backend/src/database/: mod.rs  user.rs
realworld-backend/src/models/: article.rs  mod.rs  tags.rs  user.rs
realworld-backend/src/routes/: articles.rs  mod.rs  profiles.rs  tags.rs  users.rs
rocket/: Cargo.toml
rocket/src/: main.rs
rust-web/: Cargo.toml
rust-web/ch_02/: Cargo.toml
rust-web/ch_02/src/: lib.rs  main.rs  tests.rs
rust-web/ch_03/: Cargo.toml
rust-web/ch_03/src/: lib.rs  main.rs
rust-web/ch_04/: Cargo.toml  question.json
rust-web/ch_04/src/: lib.rs  main.rs
rust-web/ch_05/: Cargo.toml
rust-web/ch_05/src/: lib.rs  main.rs  store.rs
rust-web/ch_05/src/routes/: answer.rs  question.rs
rust-web/ch_05/src/types/: answer.rs  pagination.rs
rust-web/ch_06/: Cargo.toml  log4rs.yaml
rust-web/ch_06/handle_errors/: Cargo.toml
rust-web/ch_06/src/: main.rs
rust-web/ch_06/src/routes/: question.rs
rust-web/ch_06_tracing/: Cargo.toml
rust-web/ch_06_tracing/src/: main.rs  store.rs
rust-web/ch_06_tracing/src/routes/: question.rs
rust-web/ch_06_tracing/src/types/: question.rs
rust-web/ch_07/: Cargo.toml  question.json
rust-web/ch_07/handle_errors/: Cargo.toml
rust-web/ch_07/src/: main.rs  store.rs
rust-web/ch_07/src/routes/: answer.rs  question.rs
rust-web/ch_07/src/types/: answer.rs  question.rs
rust-web/ch_08/: Cargo.toml
rust-web/ch_08/src/: main.rs
rust-web/ch_08_api/: Cargo.toml
rust-web/ch_08_api/handle_errors/: Cargo.toml
rust-web/ch_08_api/handle_errors/src/: lib.rs
rust-web/ch_08_api/src/: apilayer.rs  main.rs  store.rs
rust-web/ch_08_api/src/routes/: answer.rs  question.rs
rust-web/ch_08_api/src/types/: apilayer.rs  mod.rs  pagination.rs
rust-web/ch_09/: Cargo.toml
rust-web/ch_09/handle_errors/: Cargo.toml
rust-web/ch_09/handle_errors/src/: lib.rs
rust-web/ch_09/src/: main.rs  store.rs
rust-web/ch_09/src/routes/: authentications.rs  question.rs
rust-web/ch_09/src/types/: account.rs
rust-web/ch_10/: Cargo.toml  build.rs  setup.toml
rust-web/ch_10/handle_errors/: Cargo.toml
rust-web/ch_10/handle_errors/src/: lib.rs
rust-web/ch_10/src/: apilayer.rs  main.rs
rust-web/ch_11/: .env  .gitignore  Cargo.toml
rust-web/ch_11/mock_server/: Cargo.toml
rust-web/ch_11/mock_server/src/: lib.rs
rust-web/ch_11/src/: apilayer.rs  config.rs  lib.rs  main.rs  store.rs
rust-web/ch_11/src/routes/: answer.rs  authentications.rs  mod.rs
rust-web/ch_11/src/types/: pagination.rs  question.rs
rust-web/handle_errors/: Cargo.toml
rust-web/handle_errors/src/: lib.rs
rust_course/: Cargo.toml
rust_course/src/: lib.rs
src/: lib.rs  main.rs
src/ch2/: 10_0_lifetime.rs  11_1_error_panic.rs  11_2_result.rs  1_0_variable.rs  2_0_basic_type.rs  2_1_number.rs  2_2_char_bool_unit.rs  2_3_expression.rs  2_4_function.rs  3_1_ownership.rs  3_2_ref_or_borrow.rs  4_1_string_slice.rs  4_2_tuple.rs  4_3_struct.rs  4_4_enum.rs  4_5_array.rs  4_5_array_input.rs  5_0_flow_ctl.rs  6_1_match_if_let.rs  6_3_match_scene.rs  7_0_method.rs  8_1_generics.rs  8_2_trait.rs  8_3_trait_obj.rs  8_4_trait_enhance.rs  9_1_collection_vec.rs  9_2_collection_hashmap.rs  mod.rs
src/flappy_dragon/: main.rs
src/treehouse/: main.rs
tests/: reverse_tests.rs
treehouse/: Cargo.toml
treehouse/src/: main.rs
what_can_i_see/: Cargo.toml
what_can_i_see/src/: components.rs  map.rs  spawner.rs  turn_state.rs
zero2prod/: Cargo.toml  configuration.yaml
zero2prod/.cargo/: config.toml
zero2prod/scripts/: init_db.sh
zero2prod/src/: configrations.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
zero2prod/src/routes/: subscriptions.rs
zero2prod/tests/: health_check.rs
(+34 files in other folders)
