[package]
name = "head_first_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "0.4.0"

[[bin]]
name = "ch2_1"
path = "src/ch2/1_0_variable.rs"

[[bin]]
name = "ch2_2"
path = "src/ch2/2_0_basic_type.rs"

[[bin]]
name = "ch2_2_1"
path = "src/ch2/2_1_number.rs"

[[bin]]
name = "ch2_2_2"
path = "src/ch2/2_2_char_bool_unit.rs"
