[package]
name = "head_first_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "0.4.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ch2_1"
path = "src/ch2/1_0_variable.rs"

[[bin]]
name = "ch2_2"
path = "src/ch2/2_0_basic_type.rs"

[[bin]]
name = "ch2_2_1"
path = "src/ch2/2_1_number.rs"

[[bin]]
name = "ch2_2_2"
path = "src/ch2/2_2_char_bool_unit.rs"

[[bin]]
name = "ch2_2_3"
path = "src/ch2/2_3_expression.rs"

[[bin]]
name = "ch2_2_4"
path = "src/ch2/2_4_function.rs"

[[bin]]
name = "ch2_3_1"
path = "src/ch2/3_1_ownership.rs"

[[bin]]
name = "ch2_3_2"
path = "src/ch2/3_2_ref_or_borrow.rs"

[[bin]]
name = "ch2_4_1"
path = "src/ch2/4_1_string_slice.rs"

[[bin]]
name = "ch2_4_2"
path = "src/ch2/4_2_tuple.rs"

[[bin]]
name = "ch2_4_3"
path = "src/ch2/4_3_struct.rs"

[[bin]]
name = "ch2_4_4"
path = "src/ch2/4_4_enum.rs"

[[bin]]
name = "ch2_4_5"
path = "src/ch2/4_5_array.rs"

[[bin]]
name = "ch2_4_5_2"
path = "src/ch2/4_5_array_input.rs"

[[bin]]
name = "ch2_5_0"
path = "src/ch2/5_0_flow_ctl.rs"

[[bin]]
name = "ch2_6_1"
path = "src/ch2/6_1_match_if_let.rs"

[[bin]]
name = "ch2_6_3"
path = "src/ch2/6_3_match_scene.rs"
