[package]
name = "mall"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix = "0.12"
actix-rt = "2.5"
actix-identity = "0.3"
actix-session = "0.5"
actix-redis = "0.10"
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-native-tls", "macros"] }
r2d2 = "0.8"
tera = "1.10"
jsonwebtoken = "8.0"
log = "0.4"
env_logger = "0.9"
tokio = { version = "1.0", features = ["full"] }
redis = "0.23"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }

