[package]
name = "realworld-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5.1",features = ["json"]} 
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"] }
diesel = { version = "2.2.2", features = ["postgres"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"