[workspace]
members = ["handle_errors","ch_02", "ch_03", "ch_04", "ch_05","ch_06" ]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
log = "0.4"
env_logger = "0.9"
log4rs = "1.0"
uuid = {version = "0.8", features = ["v4"]}
