[package]
name = "ch_07"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
warp = { workspace = true }
serde = { workspace = true} 
serde_json =  {workspace = true}
handle_errors = {path = "../handle_errors"}
uuid = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}